Add Advantage images via CSS

--- a/index.html
+++ b/index.html
@@ -56,32 +56,32 @@
                 <h2>Премущества</h2>
                 <ul class="adv-list list">
                     <li>
-                        <div class="adv-bg">
-                            <img src="./images/antenna.svg" alt="Изображение антены">
+                        <div class="adv-bg antenna">
+                            <!-- <img src="./images/antenna.svg" alt="Изображение антены"> -->
                         </div>
                         <h3 class="advant-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                         <p>Идейные соображения, а также начало повседневной работы по формированию
                             позиции.</p>
                     </li>
                     <li>
-                        <div class="adv-bg">
-                            <img src="./images/clock.svg" alt="Изображение часов">
+                        <div class="adv-bg clock">
+                            <!-- <img src="./images/clock.svg" alt="Изображение часов"> -->
                         </div>
                         <h3 class="advant-title">ПУНКТУАЛЬНОСТЬ</h3>
                         <p>Задача организации, в особенности же рамки и место обучения кадров влечет за
                             собой.</p>
                     </li>
                     <li>
-                        <div class="adv-bg">
-                            <img src="./images/diagram.svg" alt="Изображение диагарммы">
+                        <div class="adv-bg diagram">
+                            <!-- <img src="./images/diagram.svg" alt="Изображение диагарммы"> -->
                         </div>
                         <h3 class="advant-title">ПЛАНИРОВАНИЕ</h3>
                         <p>Равным образом консультация с широким активом в значительной степени
                             обуславливает.</p>
                     </li>
                     <li>
-                        <div class="adv-bg">
-                            <img src="./images/astronaut.svg" alt="Изображение космонавта">
+                        <div class="adv-bg astranaut">
+                            <!-- <img src="./images/astronaut.svg" alt="Изображение космонавта"> -->
                         </div>
                         <h3 class="advant-title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
                         <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.
