--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="container">
                 <h2>Премущества</h2>
                 <ul class="adv-list list">
-                    <li>
+                    <li class="adv-item antenna">
                         <div class="adv-bg antenna">
                             <!-- <img src="./images/antenna.svg" alt="Изображение антены"> -->
                         </div>
@@ -63,7 +63,7 @@
                         <p>Идейные соображения, а также начало повседневной работы по формированию
                             позиции.</p>
                     </li>
-                    <li>
+                    <li class="adv-item clock">
                         <div class="adv-bg clock">
                             <!-- <img src="./images/clock.svg" alt="Изображение часов"> -->
                         </div>
@@ -71,7 +71,7 @@
                         <p>Задача организации, в особенности же рамки и место обучения кадров влечет за
                             собой.</p>
                     </li>
-                    <li>
+                    <li class="adv-item diagram">
                         <div class="adv-bg diagram">
                             <!-- <img src="./images/diagram.svg" alt="Изображение диагарммы"> -->
                         </div>
@@ -79,7 +79,7 @@
                         <p>Равным образом консультация с широким активом в значительной степени
                             обуславливает.</p>
                     </li>
-                    <li>
+                    <li class="adv-item astranaut">
                         <div class="adv-bg astranaut">
                             <!-- <img src="./images/astronaut.svg" alt="Изображение космонавта"> -->
                         </div>
