Add icons of Header, Advant, Footer via ::before-after

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
             <!-- Блок с контактами -->
             <ul class="nav-contacts list">
-                <li><a href="mailto:info@devstudio.com" target="_blank" rel="noopener" >info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" target="_blank" rel="noopener" >+38 096 111 11 11</a></li>
+                <li class="icon-envelop"><a href="mailto:info@devstudio.com" target="_blank" rel="noopener" >info@devstudio.com</a></li>
+                <li class="icon-mobile"><a href="tel:+380961111111" target="_blank" rel="noopener" >+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -125,10 +125,10 @@
                     <h3 class="team-name">Николай Кучеренко</h3>
                     <p lang="en" class="team-position">Product Designer</p>
                     <ul class="team-social list">
-                        <li><a href="" aria-label="Иконка ссылка на Инстаграмм">In</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Твиттер">Tw</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Фейсбук">Fb</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Линкедин">Ln</a></li>
+                        <li class="item-insta"><a href="" aria-label="Иконка ссылка на Инстаграмм" class="icon-insta"></a></li>
+                        <li class="item-twiter"><a href="" aria-label="Иконка ссылка на Твиттер" class="icon-tweeter"></a></li>
+                        <li class="item-fb"><a href="" aria-label="Иконка ссылка на Фейсбук" class="icon-fb "></a></li>
+                        <li class="item-linkedin"><a href="" aria-label="Иконка ссылка на Линкедин" class="icon-linedin"></a></li>
                     </ul>
                 </li>
                 <li class="team-card">
@@ -136,10 +136,13 @@
                     <h3 class="team-name">Ольга Иванова</h3>
                     <p lang="en" class="team-position">Frontend Developer</p>
                     <ul class="team-social list">
-                        <li><a href="" aria-label="Иконка ссылка на Инстаграмм">In</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Твиттер">Tw</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Фейсбук">Fb</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Линкедин">Ln</a></li>
+                        <li class="item-insta"><a href="" aria-label="Иконка ссылка на Инстаграмм"
+                                class="icon-insta"></a></li>
+                        <li class="item-twiter"><a href="" aria-label="Иконка ссылка на Твиттер"
+                                class="icon-tweeter"></a></li>
+                        <li class="item-fb"><a href="" aria-label="Иконка ссылка на Фейсбук" class="icon-fb "></a></li>
+                        <li class="item-linkedin"><a href="" aria-label="Иконка ссылка на Линкедин"
+                                class="icon-linedin"></a></li>
                     </ul>
                 </li>
                 <li class="team-card">
@@ -147,10 +150,13 @@
                     <h3 class="team-name">Андрей Шевченко</h3>
                     <p lang="en" class="team-position">Marketing</p>
                     <ul class="team-social list">
-                        <li><a href="" aria-label="Иконка ссылка на Инстаграмм">In</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Твиттер">Tw</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Фейсбук">Fb</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Линкедин">Ln</a></li>
+                        <li class="item-insta"><a href="" aria-label="Иконка ссылка на Инстаграмм"
+                                class="icon-insta"></a></li>
+                        <li class="item-twiter"><a href="" aria-label="Иконка ссылка на Твиттер"
+                                class="icon-tweeter"></a></li>
+                        <li class="item-fb"><a href="" aria-label="Иконка ссылка на Фейсбук" class="icon-fb "></a></li>
+                        <li class="item-linkedin"><a href="" aria-label="Иконка ссылка на Линкедин"
+                                class="icon-linedin"></a></li>
                     </ul>
                 </li>
                 <li class="team-card">
@@ -158,10 +164,13 @@
                     <h3 class="team-name">Иван Николаев</h3>
                     <p lang="en" class="team-position">UI Designer</p>
                     <ul class="team-social list">
-                        <li><a href="" aria-label="Иконка ссылка на Инстаграмм">In</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Твиттер">Tw</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Фейсбук">Fb</a></li>
-                        <li><a href="" aria-label="Иконка ссылка на Линкедин">Ln</a></li>
+                        <li class="item-insta"><a href="" aria-label="Иконка ссылка на Инстаграмм"
+                                class="icon-insta"></a></li>
+                        <li class="item-twiter"><a href="" aria-label="Иконка ссылка на Твиттер"
+                                class="icon-tweeter"></a></li>
+                        <li class="item-fb"><a href="" aria-label="Иконка ссылка на Фейсбук" class="icon-fb "></a></li>
+                        <li class="item-linkedin"><a href="" aria-label="Иконка ссылка на Линкедин"
+                                class="icon-linedin"></a></li>
                     </ul>
                 </li>
             </ul>
@@ -219,17 +228,17 @@
             <div class="foter-social">
                 <b class="title-footer">ПРИСОЕДИНЯЙТЕСЬ</b>
                 <ul class="foot-list list">
-                    <li><a href="" aria-label="Иконка ссылка на Инстаграмм">In</a></li>
-                    <li><a href="" aria-label="Иконка ссылка на Твитер">Tw</a></li>
-                    <li><a href="" aria-label="Иконка ссылка на Фейсбук">Fb</a></li>
-                    <li><a href="" aria-label="Иконка ссылка на Линкедин">Ln</a></li>
+                    <li class="icon-foot insta"><a href="" aria-label="Иконка ссылка на Инстаграмм"></a></li>
+                    <li class="icon-foot twiter"><a href="" aria-label="Иконка ссылка на Твитер"></a></li>
+                    <li class="icon-foot fb"><a href="" aria-label="Иконка ссылка на Фейсбук"></a></li>
+                    <li class="icon-foot linkedin"><a href="" aria-label="Иконка ссылка на Линкедин"></a></li>
                 </ul>
             </div>
 
             <!-- Форма подписки футера  -->
             <div class="footer-action">
                 <b class="title-footer">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
-                <div class="inpit-deco">
+                <div class="input-deco">
                     <input type="email" value="E-mail" name="e-mail">
                     <button type="button" class="footer-btn">Подписаться</button>
                 </div>
