--- a/portfolio.html
+++ b/portfolio.html
@@ -28,16 +28,18 @@
             <a href="/" class="logo-header"><span>Web</span> Studio</a>
             <nav class="header-nav">
                 <ul class="list nav-list">
-                    <li><a href="./index.html" class="site-nav" rel="noopener" >Студия</a></li>
-                    <li><a href="./portfolio.html" class="site-nav current" rel="noopener" >Портфолио</a></li>
-                    <li><a href="" class="site-nav" rel="noopener" >Контакты</a></li>
+                    <li><a href="./index.html" class="site-nav ">Студия</a></li>
+                    <li><a href="./portfolio.html" class="site-nav current">Портфолио</a></li>
+                    <li><a href="" class="site-nav">Контакты</a></li>
                 </ul>
             </nav>
-    
+        
             <!-- Блок с контактами -->
             <ul class="nav-contacts list">
-                <li><a href="mailto:info@devstudio.com" target="_blank" rel="noopener" >info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" target="_blank" rel="noopener">+38 096 111 11 11</a></li>
+                <li class="icon-envelop"><a href="mailto:info@devstudio.com" target="_blank"
+                        rel="noopener">info@devstudio.com</a></li>
+                <li class="icon-mobile"><a href="tel:+380961111111" target="_blank" rel="noopener">+38 096
+                        111 11 11</a></li>
             </ul>
         </div>
     </header>
